--- a/package.json
+++ b/package.json
@@ -234,6 +234,7 @@
     "antd": "^4.11.2",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
+    "electron-store": "^7.0.2",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
