--- a/package.json
+++ b/package.json
@@ -228,15 +228,18 @@
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
-    "yarn-deduplicate": "^3.1.0"
+    "yarn-deduplicate": "^3.1.0",
+    "@types/howler": "^2.2.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "antd": "^4.11.2",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-store": "^7.0.2",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
+    "howler": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
